Ensure to-do input text is visible in dark mode

--- a/todolist_example_component/components/ToDoList/main.scss
+++ b/todolist_example_component/components/ToDoList/main.scss
@@ -24,7 +24,6 @@
     font: inherit;
     padding: 10px 24px;
     border-radius: 8px;
-    color: black;
   }
 
   button {
